# scip-protobuf

./: .gitignore  Cargo.toml  README.md
scripts/: test.sh
src/: main.rs
test/in/grpc-example/: grpc-example.proto
test/in/hello/: hello.proto  swag.proto
