[package]
name = "scip-protobuf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scip = { git = "https://github.com/sourcegraph/scip", rev="ee677ba3756cdcdb55b39942b5701f0fde9d69fa" }
protobuf = "3"
clap = { version = "4.3.19", features = ["derive"] }

[[bin]]
name = "scip-protobuf"
path = "src/main.rs"
